# OReilly-2026-February-pandas-training

./: 2026-02February-12-MyCopy.ipynb  2026-02February-12.ipynb  My-notebook.ipynb  main.py  orders.csv  pyproject.toml
