[project]
name = "oreilly-2026-02february-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "geos>=0.2.3",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "loro>=1.10.3",
    "marimo[recommended]>=0.19.10",
    "matplotlib>=3.10.8",
    "msgspec>=0.20.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "rich>=14.3.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "statsmodels>=0.14.6",
    "xlrd>=2.0.2",
]
